ml based dashboard

--- a/templates/partials/Ltestimonial.hbs
+++ b/templates/partials/Ltestimonial.hbs
@@ -8,7 +8,7 @@
         
           <article class="testimonial__card swiper-slide">
             <img
-              src="public/img/lt1.webp"
+              src="img/lt1.jpg"
               alt="image"
               class="testimonial__img"
             />
@@ -29,7 +29,7 @@
           
           <article class="testimonial__card swiper-slide">
             <img
-              src="public/img/lt2.webp"
+              src="img/lt2.jpg"
               alt="image"
               class="testimonial__img"
             />
@@ -50,7 +50,7 @@
           
           <article class="testimonial__card swiper-slide">
             <img
-              src="public/img/lt3.webp"
+              src="img/lt3.jpg"
               alt="image"
               class="testimonial__img"
             />
@@ -71,7 +71,7 @@
           
           <article class="testimonial__card swiper-slide">
             <img
-              src="public/img/lt4.webp"
+              src="img/lt4.jpg"
               alt="image"
               class="testimonial__img"
             />
