--- a/templates/partials/testimonial.hbs
+++ b/templates/partials/testimonial.hbs
@@ -6,11 +6,11 @@
         <div class="testimonial__swiper swiper">
           <div class="swiper-wrapper">
           
-            <article class="testimonial__card swiper-slide">
+            <article class="testimonial__cards swiper-slide">
               <img
                 src="img/testimonial-perfil-1.png"
                 alt="image"
-                class="testimonial__img"
+                class="testimonial__imgs"
               />
               <h2 class="testimonial__title">Emma</h2>
               <p class="testimonial__description">
@@ -26,11 +26,11 @@
               </div>
             </article>
             
-            <article class="testimonial__card swiper-slide">
+            <article class="testimonial__cards swiper-slide">
               <img
                src="img/testimonial-perfil-3.png"
                 alt="image"
-                class="testimonial__img"
+                class="testimonial__imgs"
               />
               <h2 class="testimonial__title">Loz</h2>
               <p class="testimonial__description">
@@ -46,11 +46,11 @@
               </div>
             </article>
             
-            <article class="testimonial__card swiper-slide">
+            <article class="testimonial__cards swiper-slide">
               <img
                src="img/testimonial-perfil-4.png"
                 alt="image"
-                class="testimonial__img"
+                class="testimonial__imgs"
               />
               <h2 class="testimonial__title">Rial</h2>
               <p class="testimonial__description">
@@ -66,11 +66,11 @@
               </div>
             </article>
             
-            <article class="testimonial__card swiper-slide">
+            <article class="testimonial__cards swiper-slide">
               <img
                src="img/testimonial-perfil-2.png"
                 alt="image"
-                class="testimonial__img"
+                class="testimonial__imgs"
               />
               <h2 class="testimonial__title">Rock</h2>
               <p class="testimonial__description">
@@ -91,4 +91,19 @@
       <br><br>
       <br><br>
     </section>
-  
+  <style>
+     .testimonial__imgs {
+          width: 50%;
+          height: 50%;
+          object-fit: cover;
+          transition: transform 0.5s ease;
+        }
+        
+.testimonial__imgs {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin: 0 auto 1.5rem;
+}
+        
+  </style>
