--- a/templates/views/Lindex.hbs
+++ b/templates/views/Lindex.hbs
@@ -19,6 +19,9 @@
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="css/Lstyles.css" />
 
+    <!--=============== INTERACTIVE EFFECTS CSS ===============-->
+    <link rel="stylesheet" href="css/interactive-effects.css" />
+
     <title>Bloom Together</title>
   </head>
 </html>
@@ -374,6 +377,9 @@ if (logoutButton) {
 
 <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
 <script src="https://files.bpcontent.cloud/2025/02/21/21/20250221215948-OBVRXBB4.js"></script>
+
+<!--=============== INTERACTIVE EFFECTS JS ===============-->
+<script src="js/interactive-effects.js"></script>
 
 </body>
 </html>
