--- a/templates/partials/Ltestimonial.hbs
+++ b/templates/partials/Ltestimonial.hbs
@@ -6,16 +6,18 @@
       <div class="testimonial__swiper swiper">
         <div class="swiper-wrapper">
         
-          <article class="testimonial__card swiper-slide">
-            <img
-              src="img/lt1.jpg"
-              alt="image"
-              class="testimonial__img"
-            />
+          <article class="testimonial__card swiper-slide animate-card">
+            <div class="testimonial__image-wrapper">
+              <img
+                src="img/lt1.jpg"
+                alt="image"
+                class="testimonial__img"
+              />
+            </div>
 
             <h2 class="testimonial__title">Alex</h2>
             <p class="testimonial__description">
-              As a queer book lover, I truly appreciate the diversity of authors and stories available here. It’s a safe space to discover new perspectives.
+              As a queer book lover, I truly appreciate the diversity of authors and stories available here. It's a safe space to discover new perspectives.
             </p>
 
             <div class="testimonial__stars">
@@ -27,12 +29,14 @@
             </div>
           </article>
           
-          <article class="testimonial__card swiper-slide">
-            <img
-              src="img/lt2.jpg"
-              alt="image"
-              class="testimonial__img"
-            />
+          <article class="testimonial__card swiper-slide animate-card">
+            <div class="testimonial__image-wrapper">
+              <img
+                src="img/lt2.jpg"
+                alt="image"
+                class="testimonial__img"
+              />
+            </div>
 
             <h2 class="testimonial__title">Riley</h2>
             <p class="testimonial__description">
@@ -48,12 +52,14 @@
             </div>
           </article>
           
-          <article class="testimonial__card swiper-slide">
-            <img
-              src="img/lt3.jpg"
-              alt="image"
-              class="testimonial__img"
-            />
+          <article class="testimonial__card swiper-slide animate-card">
+            <div class="testimonial__image-wrapper">
+              <img
+                src="img/lt3.jpg"
+                alt="image"
+                class="testimonial__img"
+              />
+            </div>
 
             <h2 class="testimonial__title">Jordan</h2>
             <p class="testimonial__description">
@@ -69,16 +75,18 @@
             </div>
           </article>
           
-          <article class="testimonial__card swiper-slide">
-            <img
-              src="img/lt4.jpg"
-              alt="image"
-              class="testimonial__img"
-            />
+          <article class="testimonial__card swiper-slide animate-card">
+            <div class="testimonial__image-wrapper">
+              <img
+                src="img/lt4.jpg"
+                alt="image"
+                class="testimonial__img"
+              />
+            </div>
 
             <h2 class="testimonial__title">Sky</h2>
             <p class="testimonial__description">
-              Whether you’re looking for LGBTQ+ romance, history, or self-help, this site has it all! I’ve recommended it to all my friends in the community.
+              Whether you're looking for LGBTQ+ romance, history, or self-help, this site has it all! I've recommended it to all my friends in the community.
             </p>
 
             <div class="testimonial__stars">
